# xcbs

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
xcbs/: CMakeLists.txt  xcbs.c  xcbs.h
